# aine-copilot-plugins

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
plugins/aine-team/: README.md
plugins/aine-team/agents/: aine-architect-agent.agent.md  aine-dev-agent.agent.md  aine-pm-agent.agent.md  aine-ux-agent.agent.md
plugins/aine-team/templates/: proposal.md  ux.md
scripts/: build.mjs  constants.mjs  create-plugin.mjs  generate-skills-from-prompts.mjs  migrate-prompts-to-skills.mjs  review-skill.mjs  validate-plugins.mjs  validate-skills.mjs  yaml-parser.mjs
scripts/tests/: build.test.mjs  review-skill.test.mjs
src/aine-agents/: README.md  config.json  plugin.json
src/aine-agents/agents/: code-architect.agent.md  code-reviewer.agent.md
src/aine-misc/: README.md  plugin.json
src/aine-misc/agents/: code-explorer.agent.md
src/aine-team/: plugin.json
src/aine-team/agents/: aine-architect-agent.agent.md  aine-dev-agent.agent.md  aine-ux-agent.agent.md
src/aine-team/prompts/: aine-arch.prompt.md  aine-archive.prompt.md  aine-explore.prompt.md  aine-implement.prompt.md  aine-prd.prompt.md  aine-propose.prompt.md  aine-ux.prompt.md  aine-verify.prompt.md
src/design/: README.md  config.json  plugin.json
src/design/public/: kami-page.html
src/design/scripts/: build.mjs
src/mini-sdd/: README.md  config.json  plugin.json
src/mini-sdd/agents/: mini-sdd.agent.md
src/mini-sdd/skills/mini-sdd-context/evals/files/eval-3/: main.py  pyproject.toml
src/sdd-team/: README.md  TEMPLATES.md  config.json  plugin.json
(+116 files in other folders)
